# librpio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: rpio.h
src/: CMakeLists.txt  cpuinfo.c  rpio-private.h  rpio.c  test-rpio.c
